--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@ input[type=text]{
 
 <br><br>
 
-<input id = "0" type="button" value="0" onclick="display.value+='0'">
-<input id = "." type="button" value="." onclick="display.value+= '.'">
-<input id = "=" type="button" value="=" onclick="display.value+= eval (display.value) ">
+<input id = "0" type="button" value="0" onclick="show('0')">
+<input id = "." type="button" value="." onclick="show('.')">
+<input id = "=" type="button" value="=" onclick="solve('=') ">
 
 </div>
 
