--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@ body{
     background: lightslategrey;
     width: 450px;
     height: auto;
-    padding-left: 25%;
+    padding: 25;
 }
-input[type=text]{
-    width: 100%;
-    padding: 10px;
+.button{
     font-size: 25px;
-    font-family: Arial, serif;
+}
+
+input[type=text]{
+    width: 98.3%;
+    font-size: 16px;
 }
 
 </style>
@@ -31,10 +33,10 @@ input[type=text]{
 <input type="text" id="result">
 <br><br>
 
+<input id = "c" type="button" value="c" onclick="clr()">
+<!--input id = "^2" type="button" value="^2" onclick="show('^2')"/-->
+<!--input id = "%" type="button" value="%" onclick="show('%')"/-->
 
-<input id = "^2" type="button" value="^2" onclick="show('^2')"/>
-<input id = "%" type="button" value="%" onclick="show('%')"/>
-<input id = "/" type="button" value="/" onclick="show('/')"/>
 
 <br><br>
 
@@ -59,10 +61,10 @@ input[type=text]{
 
 <br><br>
 
-<input id = "c" type="button" value="c" onclick="clr()">
 <input id = "0" type="button" value="0" onclick="show('0')">
 <input id = "." type="button" value="." onclick="show('.')">
 <input id = "=" type="button" value="=" onclick="solve('=') ">
+<input id = "/" type="button" value="/" onclick="show('/')"/>
 
 </div>
 
