just messing around a bit

--- a/index.html
+++ b/index.html
@@ -1,34 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width= device-width, initial-scale=1">
     <meta charset=  "UTF - 8">
     <title>Calculator</title>
+    <link rel="stylesheet" href="./CSS_Calculator.css" media="screen">
 </head>
-
-<style>
-body{
-    background: honeydew;
-}
-.cal{
-    background: lightslategrey;
-    width: 450px;
-    height: auto;
-    padding: 25;
-}
-.button{
-    font-size: 25px;
-}
-
-input[type=text]{
-    width: 98.3%;
-    font-size: 16px;
-}
-
-</style>
 <body>
 <!-- Adding in buttons -->
 <div class="cal">
-
 
 <input type="text" id="result">
 <br><br>
